--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -128,7 +128,9 @@
 .zooniverse-dropdown-menu.from-top-bar
   backface-visibility: hidden // This prevents flicker for some reason.
   background: #000
-  box-shadow: 0 2px 5px rgba(#000, 0.5)
+  border: 1px solid #999
+  box-shadow: 0 3px 10px rgba(#000, 0.5)
+  color: #fff
   font: 12px "Helvetica Neue", sans-serif
   opacity: 0
   transform: translateY(-10px)
