Link avatar to current projects page

--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -103,11 +103,9 @@
     margin: 0
 
     img
+      border: 0
       height: 30px
       width: 30px
-
-      // &[src*="default_forum_avatar"]
-      //   display: none
 
   &.signed-in
     .no-user
