Add privacy policy to footer

--- a/css/zooniverse.css
+++ b/css/zooniverse.css
@@ -461,6 +461,13 @@
   font-size: 14px;
   overflow: hidden;
 }
+.zooniverse-footer .general {
+  font-size: 12px;
+  letter-spacing: 1px;
+  margin-top: 1em;
+  overflow: hidden;
+  text-transform: uppercase;
+}
 .zooniverse-footer .category {
   float: left;
   width: 25%;
