--- a/src/css/footer.styl
+++ b/src/css/footer.styl
@@ -35,6 +35,13 @@
     font-size: 14px
     overflow: hidden
 
+  .general
+    font-size: 12px
+    letter-spacing: 1px
+    margin-top: 1em
+    overflow: hidden
+    text-transform: uppercase
+
   .category
     float: left
     width: 25%
