--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -141,7 +141,8 @@
     opacity: 1
     transform: translateY(0)
 
-.zooniverse-groups-menu
+.zooniverse-groups-menu, 
+.zooniverse-languages-menu
   text-align: center
 
   button
