Prefix footer classnames

--- a/src/css/footer.styl
+++ b/src/css/footer.styl
@@ -10,7 +10,7 @@
     &:hover
       opacity: 1
 
-  .logo
+  .zooniverse-logo-container
     float: left
     opacity: 0.5
     width: 25%
@@ -23,30 +23,30 @@
       max-height: 200px
       width: 85%
 
-  .content
+  .zooniverse-footer-content
     float: left
     width: 75%
 
-  .heading
+  .zooniverse-footer-heading
     font-size: 18px
     margin-bottom: 1em
 
-  .projects
+  .zooniverse-footer-projects
     font-size: 14px
     overflow: hidden
 
-  .general
+  .zooniverse-footer-general
     font-size: 12px
     letter-spacing: 1px
     margin-top: 1em
     overflow: hidden
     text-transform: uppercase
 
-  .category
+  .zooniverse-footer-category
     float: left
     width: 25%
 
-  .category-title
+  .zooniverse-footer-category-title
     font-size: 10px
     font-weight: bold
     letter-spacing: 1px
