--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -122,7 +122,9 @@
     font-size: 12px
     padding: 10px
 
-    &:first-child
+    &[type="text"],
+    &[type="email"],
+    &[type="password"]
       width: 100%
 
   .explanation
