Footer updates, link to GitHub

--- a/src/css/footer.styl
+++ b/src/css/footer.styl
@@ -36,10 +36,12 @@
     overflow: hidden
 
   .zooniverse-footer-general
+    box-shadow: 0 1px 1px -1px gray inset
     font-size: 12px
     letter-spacing: 1px
     margin-top: 1em
     overflow: hidden
+    padding-top: 1em
     text-transform: uppercase
 
   .zooniverse-footer-category
@@ -49,5 +51,5 @@
   .zooniverse-footer-category-title
     font-size: 10px
     font-weight: bold
-    letter-spacing: 1px
+    letter-spacing: 2px
     text-transform: uppercase
