--- a/css/zooniverse.css
+++ b/css/zooniverse.css
@@ -476,10 +476,13 @@
   overflow: hidden;
 }
 .zooniverse-footer .zooniverse-footer-general {
+  -webkit-box-shadow: 0 1px 1px -1px #808080 inset;
+  box-shadow: 0 1px 1px -1px #808080 inset;
   font-size: 12px;
   letter-spacing: 1px;
   margin-top: 1em;
   overflow: hidden;
+  padding-top: 1em;
   text-transform: uppercase;
 }
 .zooniverse-footer .zooniverse-footer-category {
@@ -489,6 +492,6 @@
 .zooniverse-footer .zooniverse-footer-category-title {
   font-size: 10px;
   font-weight: bold;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   text-transform: uppercase;
 }
