--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -114,6 +114,10 @@
     display: block
     margin: 10px 0
 
+    &.checkbox
+      line-height: 1.5em
+      margin-left: 20px
+
   input
     background: #f0f0f0
     border: 1px solid #ccc
@@ -127,8 +131,12 @@
     &[type="password"]
       width: 100%
 
+    &[type="checkbox"]
+      margin-left: -20px
+
   .explanation
     font-size: 10px;
+    line-height: 1.3em
     margin: 5px 13px
     opacity: 0.75
 
