--- a/css/zooniverse.css
+++ b/css/zooniverse.css
@@ -37,8 +37,8 @@
   display: inline-block;
   max-width: 33%;
   opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   padding: 30px;
   position: relative;
   text-align: left;
@@ -130,8 +130,8 @@
   display: none;
   left: 0;
   opacity: 0.05;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=5)";
   filter: alpha(opacity=5);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=5)";
   position: absolute;
   right: 0;
   top: 0;
@@ -143,6 +143,10 @@
 .zooniverse-dialog label {
   display: block;
   margin: 10px 0;
+}
+.zooniverse-dialog label.checkbox {
+  line-height: 1.5em;
+  margin-left: 20px;
 }
 .zooniverse-dialog input {
   background: #f0f0f0;
@@ -160,12 +164,16 @@
 .zooniverse-dialog input[type="password"] {
   width: 100%;
 }
+.zooniverse-dialog input[type="checkbox"] {
+  margin-left: -20px;
+}
 .zooniverse-dialog .explanation {
   font-size: 10px;
+  line-height: 1.3em;
   margin: 5px 13px;
   opacity: 0.75;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
   filter: alpha(opacity=75);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
 }
 .zooniverse-dialog .error-message {
   color: #800000;
@@ -309,8 +317,8 @@
 }
 .zooniverse-top-bar .sign-in .separator {
   opacity: 0.5;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   filter: alpha(opacity=50);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 }
 .zooniverse-top-bar .current-user {
   display: none;
@@ -337,8 +345,8 @@
 }
 .zooniverse-top-bar .groups select:disabled {
   opacity: 0.33;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=33)";
   filter: alpha(opacity=33);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=33)";
 }
 .zooniverse-top-bar .messages {
   display: none;
@@ -384,8 +392,8 @@
   color: #fff;
   font: 12px "Helvetica Neue", sans-serif;
   opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   -webkit-transform: translateY(-10px);
   -moz-transform: translateY(-10px);
   -o-transform: translateY(-10px);
@@ -437,8 +445,8 @@
 .zooniverse-footer a {
   color: inherit;
   opacity: 0.75;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
   filter: alpha(opacity=75);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
   text-decoration: none;
 }
 .zooniverse-footer a:hover {
@@ -449,14 +457,14 @@
 .zooniverse-footer .zooniverse-logo-container {
   float: left;
   opacity: 0.5;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   filter: alpha(opacity=50);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   width: 25%;
 }
 .zooniverse-footer .zooniverse-logo-container:hover {
   opacity: 0.67;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=67)";
   filter: alpha(opacity=67);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=67)";
 }
 .zooniverse-footer .zooniverse-logo-container .zooniverse-logo {
   height: 100%;
