--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -162,3 +162,9 @@
       &:active
         border-color: rgba(#000, 0.25)
         box-shadow: 0 100px rgba(#000, 0.125) inset
+
+@media only screen and (max-width: 640px)
+  .zooniverse-dialog .underlay .container .dialog
+    max-height: 100%
+    max-width: 100%
+    overflow: auto
