--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -166,4 +166,18 @@
 
     &.stop
       font-size: 10px
-      // font-weight: bold
+
+@media only screen and (max-width: 640px)
+  .zooniverse-top-bar
+    left: 0
+    width: 100%
+
+    .no-user
+
+      .zooniverse-info
+
+        span
+          display: none
+
+  html
+    padding-top: 30px
