--- a/css/zooniverse.css
+++ b/css/zooniverse.css
@@ -201,6 +201,13 @@
   -webkit-box-shadow: 0 100px rgba(0,0,0,0.125) inset;
   box-shadow: 0 100px rgba(0,0,0,0.125) inset;
 }
+@media only screen and (max-width: 640px) {
+  .zooniverse-dialog .underlay .container .dialog {
+    max-height: 100%;
+    max-width: 100%;
+    overflow: auto;
+  }
+}
 @-moz-keyframes zooniverse-progress {
   0% {
     background-position: 0 0;
@@ -437,6 +444,18 @@
 .zooniverse-groups-menu button.stop,
 .zooniverse-languages-menu button.stop {
   font-size: 10px;
+}
+@media only screen and (max-width: 640px) {
+  .zooniverse-top-bar {
+    left: 0;
+    width: 100%;
+  }
+  .zooniverse-top-bar .no-user .zooniverse-info span {
+    display: none;
+  }
+  html {
+    padding-top: 30px;
+  }
 }
 .zooniverse-footer {
   overflow: hidden;
